--- a/config-client-elastic_query.yml
+++ b/config-client-elastic_query.yml
@@ -11,7 +11,7 @@ elastic-query-service:
 spring:
   security:
     oauth2:
-      resourcesserver:
+      resourceserver:
         jwt:
           issuer-uri: http://localhost:28080/auth/realms/microservices-realm
           jwk-set-uri: http://localhost:28080/auth/realms/microservices-realm/protocol/openid-connect/certs
