--- a/config-client-elastic_query_web.yml
+++ b/config-client-elastic_query_web.yml
@@ -25,7 +25,8 @@ elastic-query-web-client:
   query-by-text:
     method: POST
     uri: "/get-document-by-text"
-    accept: ${elastic-query-web-client.webclient.accept-type}
+    accept: 'application/vnd.api.v1+json'
+    #accept: ${elastic-query-web-client.webclient.accept-type}
 
 spring:
   thymeleaf:
